@@ -37,7 +37,6 @@ WriteMakefile(
 		'overload' => 0,
 		'Params::Get' => 0,
 		'Scalar::Util' => 0,
-		'String::Clean' => 0,
 		'String::Util' => 0
 	}, dist => $dist,
 	clean		=> { FILES => 'Data-Text-*' },
